--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -2,7 +2,7 @@
 .header {
    height: 50px;
    width: 100%;
-   position: sticky;
+   position: fixed;
    top: 0;
    display: flex;
    justify-content: space-between;
