--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -4,7 +4,7 @@
    width: 100%;
    position: fixed;
    top: 0;
-   display: flex;
+   display: none;
    justify-content: space-between;
    align-items: center;
    background: $bgColor;
