--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,42 +1,46 @@
 @import "../../globalStyles/globalStyles.scss";
 @import "animate.css";
 .home {
-   height: 100% !important;
-   align-items: center;
-   justify-content: center;
-   padding: 0 14%;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   padding-top: 100px;
 
    .home-top {
       display: flex;
-      flex-direction: row-reverse;
       width: 100%;
-      justify-content: space-between;
 
-      .img-container {
-         & img {
-            height: 300px;
-            width: 300px;
-            border: 3px solid $primeColor;
-            border-radius: 50%;
-            animation: bounceIn 0.8s forwards;
-         }
-      }
       & .text-zone {
          opacity: 0;
          animation: fadeIn 0.8s 0.8s forwards;
          text-align: left;
          display: flex;
          flex-direction: column;
+         width: 100%;
          gap: 10px;
 
          & h1 {
-            font-size: clamp(23px, 4vw, 125px);
+            font-size: clamp(23px, 3vw, 125px);
+            color: #fff;
 
             & span {
                color: $primeColor;
             }
          }
+         & .about-me {
+            color: #fff;
+            font-size: clamp(13px, 1vw, 18px);
+         }
       }
+   }
+
+   & .navigation {
+      color: #fff;
+      height: 250px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
    }
 
    & .social-links {
@@ -100,80 +104,20 @@
    }
 }
 
-@media (max-width: 1100px) {
-   .home {
-      & .img-container {
-         & img {
-            height: 265px !important;
-            width: 265px !important;
-         }
-      }
-   }
-}
-
-@media (max-width: 960px) {
-   .home {
-      & .home-top {
-         & .img-container {
-            & img {
-               height: 200px !important;
-               width: 200px !important;
-            }
-         }
-      }
-   }
-}
 @media (max-width: 860px) {
    .home {
+      padding-top: 30px;
+
       & .home-top {
-         flex-direction: column;
-         align-items: flex-start;
-
-         & .img-container {
-            & img {
-               height: 225px !important;
-               width: 225px !important;
-            }
-         }
-
          & .text-zone {
-         }
-
-         & .social-links {
-         }
-      }
-      .scroll-down {
-         justify-content: center;
-      }
-   }
-}
-
-@media (max-width: 560px) {
-   .home {
-      & .home-top {
-         & .img-container {
-            & img {
-               height: 180px !important;
-               width: 180px !important;
-            }
-         }
-
-         & .social-links {
-            & .links {
-               & .link {
-                  font-size: 18px;
-               }
+            & h1 {
+               font-size: 30px;
             }
          }
       }
-   }
-}
-@media (max-width: 460px) {
-   .home {
-      & .img-container {
-         & img {
-            height: 200px !important;
-         }
+
+      & .navigation {
+         display: none;
       }
    }
 }
@@ -181,8 +125,8 @@
    .home {
       & .home-top {
          & .text-zone {
-            & .about-me {
-               font-size: 14px;
+            & h1 {
+               font-size: 24px;
             }
          }
       }
