--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -29,7 +29,7 @@
          }
          & .about-me {
             color: #fff;
-            font-size: clamp(13px, 1vw, 18px);
+            font-size: clamp(18px, 1vw, 22px);
          }
       }
    }
@@ -106,7 +106,7 @@
 
 @media (max-width: 860px) {
    .home {
-      padding-top: 30px;
+      padding-top: 0;
 
       & .home-top {
          & .text-zone {
@@ -127,6 +127,9 @@
          & .text-zone {
             & h1 {
                font-size: 24px;
+            }
+            & .about-me {
+               font-size: 16px;
             }
          }
       }
