--- a/src/Pages/Layout/Layout.scss
+++ b/src/Pages/Layout/Layout.scss
@@ -23,7 +23,6 @@
       height: 100%;
       opacity: 0;
       animation: fadeIn 1.2s 1.2s forwards;
-
       & section {
          & .container {
             margin: 35px 0;
@@ -41,6 +40,8 @@
             & p {
                color: #fff;
                margin-bottom: 14px;
+               font-size: 18px;
+               text-align: left;
 
                & span {
                   color: $primeColor;
