--- a/src/Pages/Layout/Layout.scss
+++ b/src/Pages/Layout/Layout.scss
@@ -42,6 +42,7 @@
                margin-bottom: 14px;
                font-size: 18px;
                text-align: left;
+               line-height: 28px;
 
                & span {
                   color: $primeColor;
