--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,7 @@
 @import "./globalStyles/globalStyles.scss";
 body {
    margin: 0;
-   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-      "Helvetica Neue", sans-serif;
+   font-family: "Montserrat", sans-serif;
    background-color: $bgColor;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
