--- a/src/Pages/Contact/Contact.scss
+++ b/src/Pages/Contact/Contact.scss
@@ -8,9 +8,11 @@
    & .success-message {
       position: absolute;
       width: 100%;
-      top: 0;
-      left: 0;
-      background: rgba(0, 0, 0, 0.2);
+      height: 50%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: grey;
       z-index: 99;
       display: flex;
       align-items: center;
@@ -28,7 +30,7 @@
             background: $bgColor;
             border-radius: 24px;
             color: #000;
-            display: flex;
+            display: none;
             flex-direction: column;
             align-items: center;
             justify-content: space-evenly;
