--- a/src/Components/AnimatedIcons/AnimatedIcons.scss
+++ b/src/Components/AnimatedIcons/AnimatedIcons.scss
@@ -1,7 +1,7 @@
 @import "../../globalStyles/globalStyles.scss";
 @import "animate.css";
 .stacks {
-   display: flex;
+   display: none;
    justify-content: flex-start;
    align-items: center;
    gap: 20px;
