--- a/src/Pages/Contact/Contact.scss
+++ b/src/Pages/Contact/Contact.scss
@@ -5,66 +5,6 @@
    position: relative;
    width: 100%;
 
-   & .success-message {
-      position: absolute;
-      width: 100%;
-      height: 50%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: grey;
-      z-index: 99;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      visibility: hidden;
-      z-index: 1999;
-
-      &.show {
-         visibility: visible;
-
-         & .message-box {
-            height: 50%;
-            width: 50%;
-            background: $bgColor;
-            border-radius: 24px;
-            color: #000;
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
-            opacity: 0;
-            color: #fff;
-            animation: bounceIn 0.6s forwards;
-            margin-bottom: 10%;
-
-            & .icon {
-               color: $primeColor;
-               font-size: 84px;
-            }
-            & button {
-               width: 120px;
-               height: 36px;
-               background: $darkGrey;
-               border: none;
-               outline: none;
-               color: #fff;
-               transform: translate(-5px, -5px);
-               box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
-               transition: all 0.1s;
-               cursor: pointer;
-               text-transform: uppercase;
-
-               &:hover {
-                  transform: translate(0, 0);
-                  box-shadow: none;
-               }
-            }
-         }
-      }
-   }
-
    & form {
       display: flex;
       flex-direction: column;
@@ -114,6 +54,112 @@
          &:hover {
             transform: translate(0, 0);
             box-shadow: none;
+         }
+      }
+   }
+}
+.success-message {
+   position: fixed;
+   width: 100vw;
+   height: 100vh;
+   top: 0;
+   left: 0;
+   background: rgba(0, 0, 0, 0.6);
+   z-index: 99;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   visibility: hidden;
+   z-index: 1999;
+
+   &.show {
+      visibility: visible;
+
+      & .message-box {
+         height: 400px;
+         width: 400px;
+         background: $bgColor;
+         border-radius: 24px;
+         color: #000;
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         justify-content: center;
+         gap: 24px;
+         opacity: 0;
+         color: #fff;
+         animation: bounceIn 0.6s forwards;
+         padding: 0 24px;
+
+         & .icon {
+            color: $primeColor;
+            font-size: 84px;
+         }
+         & p {
+            text-align: center;
+         }
+         & button {
+            width: 120px;
+            height: 36px;
+            background: $darkGrey;
+            border: none;
+            outline: none;
+            color: #fff;
+            transform: translate(-5px, -5px);
+            box-shadow: 10px 10px rgba(0, 0, 0, 0.2);
+            transition: all 0.1s;
+            cursor: pointer;
+            text-transform: uppercase;
+
+            &:hover {
+               transform: translate(0, 0);
+               box-shadow: none;
+            }
+         }
+      }
+   }
+}
+@media (max-width: 760px) {
+   .success-message {
+      &.show {
+         & .message-box {
+            width: 60vw;
+            height: 60vw;
+         }
+      }
+   }
+}
+@media (max-width: 560px) {
+   .success-message {
+      &.show {
+         & .message-box {
+            width: 300px;
+            height: 300px;
+            justify-content: center;
+            gap: 5%;
+
+            & .icon {
+               font-size: 40px;
+            }
+            & p {
+               font-size: 14px;
+               line-height: 18px;
+            }
+            & button {
+               font-size: 12px;
+               height: 25px;
+               width: 80px;
+            }
+         }
+      }
+   }
+}
+@media (max-width: 360px) {
+   .success-message {
+      &.show {
+         & .message-box {
+            width: 260px;
+            height: 260px;
          }
       }
    }
