--- a/src/Pages/Contact/Contact.scss
+++ b/src/Pages/Contact/Contact.scss
@@ -24,6 +24,7 @@
          transform: translate(-5px, -5px);
          box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
          transition: all 0.1s ease-out;
+         font-family: sans-serif;
 
          &:hover {
             transform: translate(0, 0);
