--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -53,7 +53,11 @@
 
             &:hover {
                color: $primeColor;
-               rotate: 360deg;
+            }
+
+            & a {
+               all: unset;
+               cursor: pointer;
             }
          }
       }
