--- a/src/globalStyles/globalStyles.scss
+++ b/src/globalStyles/globalStyles.scss
@@ -2,5 +2,8 @@ $primeColor: #adff2f;
 $secondaryColor: #61892f;
 $bgColor: #222629;
 $darkGrey: #474b4f;
-$lightGrey: #6b6e70;
+$lightGrey: #f5f5f5;
 /*#86c232*/
+
+$primeColorLight: #32cd32;
+$fontColorLightMode: #555555;
