--- a/src/Components/Loading/Loading.scss
+++ b/src/Components/Loading/Loading.scss
@@ -1,3 +1,4 @@
+@import "../../globalStyles/globalStyles.scss";
 .loader-container {
    width: 100%;
    height: 100%;
@@ -18,6 +19,11 @@
       }
       &:nth-of-type(3) {
          animation-delay: 0.2s;
+      }
+   }
+   &.light-mode-loader {
+      & .loader {
+         background: $fontColorLightMode;
       }
    }
 }
