--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,14 +1,12 @@
 @import "../../globalStyles/globalStyles.scss";
 @import "animate.css";
 .home {
-   width: 100%;
    display: flex;
    flex-direction: column;
    padding-top: 100px;
-
    .home-top {
       display: flex;
-      width: 100%;
+      width: 90%;
 
       & .text-zone {
          opacity: 0;
@@ -18,6 +16,47 @@
          flex-direction: column;
          width: 100%;
          gap: 10px;
+
+         & .navigations {
+            height: 250px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 14px;
+            & div {
+               color: #fff;
+               text-transform: uppercase;
+               font-size: 12px;
+               letter-spacing: 2px;
+               font-weight: 600;
+               transition: all 0.3s ease-in-out;
+               display: flex;
+               align-items: center;
+               gap: 8px;
+               cursor: pointer;
+
+               & p {
+                  font-size: 12px;
+                  margin: 0;
+               }
+               & .line {
+                  height: 1px;
+                  width: 35px;
+                  background: #fff;
+               }
+
+               &.current-section {
+                  & p {
+                     color: $primeColor;
+                  }
+
+                  & .line {
+                     width: 65px;
+                     background: $primeColor;
+                  }
+               }
+            }
+         }
 
          & .social-links {
             display: flex;
@@ -38,7 +77,7 @@
                   display: flex;
                   align-items: center;
                   justify-content: center;
-                  curosr: pointer;
+                  cursor: pointer;
 
                   &:hover {
                      color: $primeColor;
@@ -53,7 +92,7 @@
          }
 
          & h1 {
-            font-size: clamp(26px, 4vw, 125px);
+            font-size: clamp(26px, 3vw, 125px);
             color: #fff;
             & span {
                color: $primeColor;
@@ -90,6 +129,27 @@
                   }
                }
             }
+
+            & .navigations {
+               & div {
+                  & .line {
+                     background: $fontColorLightMode;
+                     height: 2px;
+                  }
+                  & p {
+                     color: $fontColorLightMode;
+                  }
+
+                  &.current-section {
+                     & .line {
+                        background: $primeColorLight;
+                     }
+                     & p {
+                        color: $primeColorLight;
+                     }
+                  }
+               }
+            }
          }
       }
    }
@@ -98,6 +158,16 @@
 @media (max-width: 860px) {
    .home {
       padding-top: 0;
+
+      & .home-top {
+         width: 100%;
+
+         & .text-zone {
+            & .navigations {
+               display: none;
+            }
+         }
+      }
    }
 }
 @media (max-width: 360px) {
