--- a/src/Pages/Contact/Contact.scss
+++ b/src/Pages/Contact/Contact.scss
@@ -73,8 +73,6 @@
                box-shadow: none;
             }
          }
-         & button {
-         }
       }
    }
 }
@@ -191,6 +189,7 @@
                font-size: 12px;
                height: 25px;
                width: 80px;
+               box-shadow: 5px 5px rgba(0, 0, 0, 0.3) !important;
             }
          }
       }
